--- a/css/css-main.css
+++ b/css/css-main.css
@@ -2,3 +2,115 @@ body {
     margin: 0 auto;
 }
 
+h1 {
+    padding: 1rem;
+    color: #ffaa22;
+    background-color: black;
+    text-shadow: 10px 10px 10px;
+    max-width: fit-content;
+    margin: 0 auto;
+}
+
+input {
+    font-size: larger;
+    text-align: center;
+}
+
+.search-cont {
+    display: flex;
+    justify-content: center;
+    margin-top: 16px;
+}
+
+.go {
+    box-shadow: 0px 1px 0px 0px #fff6af;
+    max-width: fit-content;
+    background-color: #ffec64;
+    border-radius: 6px;
+    border: 1px solid #ffaa22;
+    display: inline-block;
+    cursor: pointer;
+    color: #333333;
+    font-family: Arial;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 6px 24px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #ffee66;
+}
+
+.go:hover {
+    background: linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+    background-color: #ffab23;
+}
+
+.go:active {
+    position: relative;
+    top: 1px;
+}
+
+.myLoc {
+    box-shadow: 0px 1px 0px 0px #fff6af;
+    max-width: fit-content;
+    background-color: #ffec64;
+    border-radius: 6px;
+    border: 1px solid #ffaa22;
+    display: inline-block;
+    cursor: pointer;
+    color: #333333;
+    font-family: Arial;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 6px 24px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #ffee66;
+}
+
+.myLoc:hover {
+    background: linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+    background-color: #ffab23;
+}
+
+.myLoc:active {
+    position: relative;
+    top: 1px;
+}
+
+.locAndCopy {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.copyLoc {
+    box-shadow: 0px 1px 0px 0px #fff6af;
+    max-width: fit-content;
+    background-color: #ffec64;
+    border-radius: 6px;
+    border: 1px solid #ffaa22;
+    display: inline-block;
+    cursor: pointer;
+    color: #333333;
+    font-family: Arial;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 6px 24px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #ffee66;
+}
+
+.copyLoc:hover {
+    background: linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+    background-color: #ffab23;
+}
+
+.copyLoc:active {
+    position: relative;
+    top: 1px;
+}
+
+div> .map {
+    display: flex;
+    align-items: center;
+}
