--- a/css/css-main.css
+++ b/css/css-main.css
@@ -1,11 +1,22 @@
-body {
-    margin: 0 auto;
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700');
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700|Roboto:300,400,500,700');
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    margin: 0;
+    padding: 0;
+    background-color: rgb(36, 36, 36);
+    font-family: 'Roboto', sans-serif;
+    color: #fff;
+    font-weight: 200
 }
 
 h1 {
     padding: 1rem;
     color: #ffaa22;
-    background-color: black;
+    background-color: rgb(36, 36, 36);
     text-shadow: 10px 10px 10px;
     max-width: fit-content;
     margin: 0 auto;
@@ -13,6 +24,11 @@ h1 {
 
 input {
     font-size: larger;
+    text-align: center;
+}
+
+h2 {
+    color: rgb(185, 183, 183);
     text-align: center;
 }
 
@@ -110,7 +126,46 @@ input {
     top: 1px;
 }
 
-div> .map {
+/* .map-container {
+    height: 100%;
     display: flex;
-    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+  justify-content: center;
+} */
+
+#map {
+    width: 75%;
+    height: 400px;
+    margin: 0 auto;
+    border:2px solid red;
+    border-radius: 3%;
+}
+
+.locations-table {
+    margin-top: 10px;;
+    display: flex;
+    justify-content: center;
+}
+
+@media (max-width:770px) {
+    h1 {
+        padding: 1rem;
+        color: #ff2222;
+        background-color: rgb(36, 36, 36);
+        text-shadow: 10px 10px 10px;
+        max-width: fit-content;
+        margin: 0 auto;
+    }
+    
+    input {
+        font-size: medium;
+        text-align: center;
+    }
+    
+    h2 {
+        color: rgb(185, 183, 183);
+        text-align: center;
+    }
+    
 }
