--- a/css/css-main.css
+++ b/css/css-main.css
@@ -135,18 +135,33 @@ h2 {
 } */
 
 #map {
-    width: 75%;
+    width: 55%;
     height: 400px;
     margin: 0 auto;
-    border:2px solid red;
+    border: 2px solid red;
     border-radius: 3%;
+    display: flex;
+
 }
 
 .locations-table {
-    margin-top: 10px;;
+    margin-top: 10px;
+    ;
     display: flex;
     justify-content: center;
 }
+
+.weather-details-container {
+    border: 2px solid blue;
+    /* display: flex; */
+    /* align-items: center; */
+    /* justify-content: center; */
+    height: 200px;
+    /* flex-direction: column; */
+    padding: 50px;
+    margin: auto;
+}
+
 
 @media (max-width:770px) {
     h1 {
@@ -157,15 +172,27 @@ h2 {
         max-width: fit-content;
         margin: 0 auto;
     }
-    
     input {
         font-size: medium;
         text-align: center;
     }
-    
     h2 {
         color: rgb(185, 183, 183);
         text-align: center;
     }
-    
+    .go {
+        font-size: 10px;
+        max-width: fit-content;
+    }
+    .myLoc {
+        font-size: 10px;
+        max-width: fit-content;
+    }
+    .copyLoc {
+        font-size: 10px;
+        max-width: fit-content;
+    }
+    .weather-details-container {
+        width: 56%;
+
 }
