--- a/css/css-main.css
+++ b/css/css-main.css
@@ -114,3 +114,21 @@ div> .map {
     display: flex;
     align-items: center;
 }
+
+.screen {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgb(0 0 0 / 60%);
+    z-index: 1;
+    cursor: pointer;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .8s;
+}
+
+/* .modal {
+
+} */
